--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ label: Ring Webgi
 <body>
     <div id="loader">
         <!-- <img src="{{ get_asset_url('/3D-Ring-Webgi/assets/rio-logo.png') }}" alt="Logo" id="logo"> -->
-        <img src="assets/rio-logo.png" alt="Logo" id="logo">
+        <img src="assets/digital-arts-logo-new.png" alt="Logo" id="logo">
 
     </div>
     <div id="main-container">
