--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ label: Ring Webgi
 
 <head>
     <meta charset="UTF-8">
-    <title>Rio Grande Ring Configurator</title>
+    <title>Ring Configurator</title>
     <!-- <link rel="stylesheet" href="{{ get_asset_url('/3D-Ring-Webgi/style.css') }}"> -->
     <!-- {{ standard_header_includes }} -->
     <link rel="stylesheet" href="style.css">
